--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,6 +7,10 @@ buildscript {
 
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        
+        implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+
+        implementation platform('com.google.firebase:firebase-bom:32.7.4')
     }
 }
 
